[gd_scene load_steps=5 format=3 uid="uid://b837ov6j6vxcy"]

[ext_resource type="Script" path="res://SelectMenu/trim_image.gd" id="1_0jtks"]
[ext_resource type="Script" path="res://SelectMenu/trim_border.gd" id="2_olqx5"]
[ext_resource type="Texture2D" uid="uid://bvku0uderbhwb" path="res://clockwise.png" id="3_vdhec"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21omp"]
size = Vector2(512, 512)

[node name="TrimImage" type="Node2D"]
z_index = 50
script = ExtResource("1_0jtks")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_21omp")

[node name="Mask" type="Polygon2D" parent="Area2D"]
clip_children = 1
polygon = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)

[node name="Image" type="Sprite2D" parent="Area2D/Mask"]

[node name="Border" type="Line2D" parent="."]
self_modulate = Color(1, 1, 1, 0.376471)
z_index = 100
points = PackedVector2Array(-1, -1, 1, -1, 1, 1, -1, 1)
closed = true
width = 2.0
script = ExtResource("2_olqx5")
rect_length = 464.0

[node name="ButtonRotate" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -336.0
offset_right = 16.0
offset_bottom = -288.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("3_vdhec")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="ButtonRotate" to="." method="_on_button_rotate_pressed"]
